<resources>
    <string name="app_name">My Application</string>
    <string name="nomeApp">MetreoVC</string>
    <string name="nome">Introduza o Email</string>
    <string name="pwd">Introduza a Password</string>
    <string name="registar">Ainda não tem conta? Registar Aqui!</string>
    <string name="login">Login</string>
    <string name="asterisco">*</string>
    <string name="cPWD">Confirmar Password</string>
    <string name="registarButton">Registar</string>
    <string name="vento">Vento</string>
    <string name="precipitacao">Precipitação</string>
    <string name="esqPwd">Esqueceu-se da Password? Clique Aqui!</string>
    <string name="sendEmail">Recuperar Password</string>
    <string name="definicoes">Definições</string>
    <string name="notify">    Notificações</string>
    <string name="opcao">Selecione uma Opção:</string>
    <string name="saveChanges">Guardar Alterações</string>
    <string name="periodoMinimoOnda">Periodo Minimo da Onda</string>
    <string name="periodoMaximoOnda">Periodo Máximo da Onda</string>
    <string name="marMinimoTotal">Altura Minima Mar</string>
    <string name="marMaximoTotal">Altura Máxima Mar</string>
    <string name="ondulacaoMinM">Ondulação Minima</string>
    <string name="metros">(m)</string>
    <string name="ondulacaoMax">Ondulação Máxima</string>
    <string name="temperaturaMaxima">Temperatura Máxima Mar</string>
    <string name="temperaturaMinima">Temperatura Minima Mar</string>
    <string name="direcaoOnda">Direção Onda</string>
    <string name="Tema" />
    <string name="tem">Tema</string>
    <string name="nomel">Nome</string>
    <string name="favorito">Favorito</string>
    <string name="temperatura">TEMPERATURA</string>
    <string name="max">Máxima</string>
    <string name="Minima">Minima</string>
    <string name="addFav">Adicionar Favorito</string>
</resources>