<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="271dp"
        android:layout_height="231dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/meteo"
        tools:srcCompat="@drawable/meteo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/acme"
        android:text="@string/nomeApp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/registarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registar"
        android:textColor="#0029C1"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/esqPwdTextView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="@string/login"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/registarTextView"
        app:layout_constraintStart_toStartOf="@+id/registarTextView"
        app:layout_constraintTop_toBottomOf="@+id/registarTextView" />

    <TextView
        android:id="@+id/asteriscoEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:text="@string/asterisco"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintTop_toTopOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/asteriscoPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:text="@string/asterisco"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/esqPwdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/esqPwd"
        android:textColor="#0029C1"
        app:layout_constraintEnd_toEndOf="@+id/registarTextView"
        app:layout_constraintStart_toStartOf="@+id/registarTextView"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>