<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistarActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="249dp"
        android:layout_height="195dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/meteo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/acme"
        android:text="@string/nomeApp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/confirmarPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/cPWD"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/registarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/registarButton"
        app:layout_constraintEnd_toEndOf="@+id/confirmarPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/confirmarPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/confirmarPasswordEditText" />

    <TextView
        android:id="@+id/asteriscoEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/asterisco"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintTop_toTopOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/asteriscoPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/asterisco"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/asteriscoConfirmarPasswordlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/asterisco"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/confirmarPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/confirmarPasswordEditText" />

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/nomel"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="97dp" />

</androidx.constraintlayout.widget.ConstraintLayout>